[package]
edition = "2018"
name = "cubeclient_rs"
version = "0.1.0"
authors = ["Cube Dev, Inc.", "Jichao Sun"]
description = "Client for Cube.js"
homepage = "https://cube.dev"
documentation = "https://cube.dev/docs"
license = "Apache-2.0"
resolver = "2"

[dependencies.anyhow]
version = "1.0"

[dependencies.async-trait]
version = "0.1.51"

[dependencies.log]
version = "0.4"

[dependencies.reqwest]
version = "^0.11"
features = [
    "json",
    "multipart",
    "rustls-tls",
]
default-features = false

[dependencies.reqwest-middleware]
version = "0.1.0"

[dependencies.serde]
version = "^1.0"

[dependencies.serde_derive]
version = "^1.0"

[dependencies.serde_json]
version = "^1.0"

[dependencies.tokio]
version = "1.6"
features = ["time"]

[dependencies.url]
version = "^2.2"

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dev-dependencies.log]
version = "=0.4.11"

[dev-dependencies.tokio]
version = "1"
features = ["macros"]

[dev-dependencies.wiremock]
version = "0.5"
